@@ -1,3 +1,13 @@
+2005-10-08  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_font_options.c: Implemented
+	  cairo_font_options_t.
+	* packages/cairo/ext/rb_cairo_surface.c: ditto.
+	* packages/cairo/ext/rb_cairo.c: ditto.
+	* packages/cairo/ext/rb_cairo.h: ditto.
+	* packages/cairo/ext/cairo.def: ditto.
+	* packages/cairo/lib/cairo.rb: ditto.
+
 2005-10-07  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext: Added c-mode style configuration header for
